Added some preliminary theory for PistonPowerplant

--- a/doc/io360.md
+++ b/doc/io360.md
@@ -157,3 +157,47 @@ Where $P$ is the actual engine power output. This could be
 To model any fuel injected piston engine in the Lycoming lineup, for example IO-540, non-dimensionalize:
 - Power values in Figure 3-21 with rated power
 - Fuel consumption in figure 3-5 with fuel consumption at rated power with maximum power mixture.
+
+## Piston Thruster
+
+We define a piston thruster as the combination of a piston engine, a propeller and a transmission mechanism connecting them. The transmission imposes a kinematic constraint on the angular velocities of the engine and the propeller.
+
+For the engine the angular momentum equation along the crankshaft can be written as:
+$$M_{tr, cs} + M_{eng,cs} = J_{cs} \dot{\omega}_{cs}$$
+
+Where:
+- $M_{tr,cs}$: Torque exerted on the crankshaft by the transmission.
+- $M_{eng, cs}$: Output torque exerted by the engine on the crankshaft.
+- $J_{cs}$: Crankshaft moment of inertia.
+- $\omega_{cs}$: Crankshaft angular velocity.
+
+For the propeller:
+$$M_{tr, p} + M_{air,p} = J_{p} \dot{\omega}_{p}$$
+
+Where:
+- $M_{tr,p}$: Torque exerted on the propeller by the transmission.
+- $M_{air, p}$: Aerodynamic torque on the propeller.
+- $J_{p}$: Propeller moment of inertia.
+- $\omega_{p}$: Propeller angular velocity.
+
+The transmission transfers mechanical power from the engine crankshaft to the propeller  with a mechanical efficiency $\eta_t$:
+$$P_{p} = \eta_t P_{eng}$$.
+
+Where $P_{p}$ is the power applied on the propeller, and $P_{eng}$ is the power output by the engine. These are given by:
+$$P_{p} = M_{tr,p} \omega_{p}$$
+$$P_{eng} = M_{cs,tr} \omega_{cs}$$
+
+The angular velocity of the crankshaft and the propeller are related by the transmission's (signed) gear ratio $n_t$:
+$$\omega_{p} = n_t \omega_{cs}$$
+
+All kinematic and dynamic magnitudes defined so far are positive clockwise.
+
+From the above equations we have:
+$$M_{tr, p} \omega_{p} = \eta_t M_{cs, tr} \omega_{cs} $$
+$$M_{tr, cs} = -M_{cs,tr} = -n \dfrac{1}{\eta_t} M_{tr, p}$$
+
+Using this equality we can combine the engine and propeller angular momentum equations to yield:
+$$-n \dfrac{1}{\eta_t} M_{tr, p} + M_{eng,cs} = J_{cs} \dot{\omega}_{cs}$$
+
+$$M_{eng, cs} + n \dfrac{1}{\eta_t} M_{aero, p} = \left(J_{cs} + \dfrac{n^2}{\eta_t}
+J_{p} \right) \dot{\omega}_{cs}$$
