PistonThruster implemented and tested on REPL for both CW and CCW configurations, formal unit tests pending

--- a/doc/io360.md
+++ b/doc/io360.md
@@ -180,24 +180,34 @@ Where:
 - $J_{p}$: Propeller moment of inertia.
 - $\omega_{p}$: Propeller angular velocity.
 
-The transmission transfers mechanical power from the engine crankshaft to the propeller  with a mechanical efficiency $\eta_t$:
-$$P_{p} = \eta_t P_{eng}$$.
+The transmission transfers mechanical power from the engine crankshaft to the propeller  with a mechanical efficiency $\eta$:
+$$P_{out} = \eta P_{in}$$.
 
-Where $P_{p}$ is the power applied on the propeller, and $P_{eng}$ is the power output by the engine. These are given by:
-$$P_{p} = M_{tr,p} \omega_{p}$$
-$$P_{eng} = M_{cs,tr} \omega_{cs}$$
+Where $P_{out}$ is the power exerted on the propeller and $P_{in}$ is the power provided by the engine. These are given by:
+$$P_{out} = M_{tr,p} \omega_{p}$$
+$$P_{in} = M_{cs,tr} \omega_{cs}$$
 
-The angular velocity of the crankshaft and the propeller are related by the transmission's (signed) gear ratio $n_t$:
-$$\omega_{p} = n_t \omega_{cs}$$
+The angular velocity of the crankshaft and the propeller are related by the transmission's (signed) gear ratio $n$:
+$$\omega_{p} = n \omega_{cs}$$
 
 All kinematic and dynamic magnitudes defined so far are positive clockwise.
 
 From the above equations we have:
-$$M_{tr, p} \omega_{p} = \eta_t M_{cs, tr} \omega_{cs} $$
-$$M_{tr, cs} = -M_{cs,tr} = -n \dfrac{1}{\eta_t} M_{tr, p}$$
+$$M_{tr, p} \omega_{p} = \eta M_{cs, tr} \omega_{cs} $$
+$$M_{tr, cs} = -M_{cs,tr} = -n \dfrac{1}{\eta} M_{tr, p}$$
 
 Using this equality we can combine the engine and propeller angular momentum equations to yield:
-$$-n \dfrac{1}{\eta_t} M_{tr, p} + M_{eng,cs} = J_{cs} \dot{\omega}_{cs}$$
+$$-n \dfrac{1}{\eta} M_{tr, p} + M_{eng,cs} = J_{cs} \dot{\omega}_{cs}$$
 
-$$M_{eng, cs} + n \dfrac{1}{\eta_t} M_{aero, p} = \left(J_{cs} + \dfrac{n^2}{\eta_t}
+$$M_{eng, cs} + n \dfrac{1}{\eta} M_{air, p} = \left(J_{cs} + \dfrac{n^2}{\eta}
 J_{p} \right) \dot{\omega}_{cs}$$
+
+Or, equivalently:
+$$M_{air, p} + \dfrac{\eta}{n} M_{eng, cs} = \left(J_{p} + \dfrac{\eta}{n^2}
+J_{cs} \right) \dot{\omega}_{p}$$
+
+We define the excess torque as the sum of the torque applied on the propeller at the transmission output and the torque produced by aerodynamic drag (typically opposite in sign):
+$$M_{exc} = M_{tr,p} + M_{air,p} = J_p \dot{\omega}_{p} = J_p n \dot{\omega}_{cs}$$
+
+The excess power is then:
+$$P_{exc} = M_{exc} \omega_p$$
