Renamed Airframe to Vehicle, changed C182T to C172R

--- a/sketches/c172r_points.ipynb
+++ b/sketches/c172r_points.ipynb
@@ -4,17 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RQuat([1.0, 0.0, 0.0, 0.0])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Flight\n",
     "using Unitful\n",
@@ -54,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, as our airframe reference frame origin $O_b$, we select the aerodynamics reference point $O_a$.\n",
+    "Now, as our vehicle reference frame origin $O_b$, we select the aerodynamics reference point $O_a$.\n",
     "Its position is given by JSBSim as:"
    ]
   },
@@ -155,15 +145,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "r_ObG0_b = [0.05588000000000015, -7.807613203284035e-17, 0.58166]\n",
-      "r_ObP_b = [2.05486, -3.536755463001573e-16, 0.8331199999999999]\n"
+      "r_ObG0_b = fromJSBSim([41, 0, 36.5]) = [0.05588000000000015, -7.807613203284035e-17, 0.58166]\n",
+      "r_ObG1_b = fromJSBSim([36, -14, 24]) = [0.18288000000000004, -0.3556000000000002, 0.8991599999999998]\n",
+      "r_ObG2_b = fromJSBSim([36, 14, 24]) = [0.18288000000000004, 0.35559999999999986, 0.8991599999999998]\n",
+      "r_ObG3_b = fromJSBSim([70, -14, 24]) = [-0.68072, -0.3556000000000001, 0.8991599999999998]\n",
+      "r_ObG4_b = fromJSBSim([70, 14, 24]) = [-0.68072, 0.35559999999999997, 0.8991599999999998]\n",
+      "r_ObG5_b = fromJSBSim([95, 0, 24]) = [-1.3157199999999998, 5.101388706528218e-17, 0.8991599999999998]\n",
+      "r_ObG6_b = fromJSBSim([56, -112, 59.4]) = [-0.3251200000000003, -2.8447999999999998, -4.440892098500626e-16]\n",
+      "r_ObG7_b = fromJSBSim([56, 112, 59.4]) = [-0.3251199999999994, 2.8447999999999998, 4.440892098500626e-16]\n",
+      "r_ObN_b = fromJSBSim([-6.8, 0, -19.5]) = [1.27, -4.009567099216383e-16, 2.00406]\n",
+      "r_ObL_b = fromJSBSim([58.2, -43, -15.5]) = [-0.381, -1.0922, 1.9024599999999998]\n",
+      "r_ObR_b = fromJSBSim([58.2, 43, -15.5]) = [-0.381, 1.0922, 1.90246]\n",
+      "r_ObP_b = fromJSBSim([-37.7, 0, 26.6]) = [2.05486, -3.536755463001573e-16, 0.8331199999999999]\n"
      ]
     },
     {
@@ -180,46 +180,45 @@
     }
    ],
    "source": [
-    "r_ObG0_b = fromJSBSim([41, 0, 36.5])\n",
-    "r_ObG1_b = fromJSBSim([36, -14, 24])\n",
-    "r_ObG2_b = fromJSBSim([36, 14, 24])\n",
-    "r_ObG3_b = fromJSBSim([70, -14, 24])\n",
-    "r_ObG4_b = fromJSBSim([70, 14, 24])\n",
-    "r_ObG5_b = fromJSBSim([95, 0, 24])\n",
-    "r_ObG6_b = fromJSBSim([56, -112, 59.4])\n",
-    "r_ObG7_b = fromJSBSim([56, 112, 59.4])\n",
-    "r_ObN_b = fromJSBSim([-6.8, 0, -19.5])\n",
-    "r_ObL_b = fromJSBSim([58.2, -43, -15.5])\n",
-    "r_ObR_b = fromJSBSim([58.2, 43, -15.5])\n",
-    "r_ObP_b = fromJSBSim([-37.7, 0, 26.6])\n",
-    "\n",
-    "@show r_ObG0_b r_ObP_b"
+    "@show r_ObG0_b = fromJSBSim([41, 0, 36.5])\n",
+    "@show r_ObG1_b = fromJSBSim([36, -14, 24])\n",
+    "@show r_ObG2_b = fromJSBSim([36, 14, 24])\n",
+    "@show r_ObG3_b = fromJSBSim([70, -14, 24])\n",
+    "@show r_ObG4_b = fromJSBSim([70, 14, 24])\n",
+    "@show r_ObG5_b = fromJSBSim([95, 0, 24])\n",
+    "@show r_ObG6_b = fromJSBSim([56, -112, 59.4])\n",
+    "@show r_ObG7_b = fromJSBSim([56, 112, 59.4])\n",
+    "@show r_ObN_b = fromJSBSim([-6.8, 0, -19.5])\n",
+    "@show r_ObL_b = fromJSBSim([58.2, -43, -15.5])\n",
+    "@show r_ObR_b = fromJSBSim([58.2, 43, -15.5])\n",
+    "@show r_ObP_b = fromJSBSim([-37.7, 0, 26.6])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From Wikipedia, we know the mass of the empty 182T is 894 kg. The inertia tensor with respect to its\n",
-    "own center of mass $G_0$, projected in axes $\\varepsilon_b$ (that is, $J_{0[G_0]}^{b}$) can be\n",
-    "estimated from the values given by Roskam for a similar configuration but with a different mass\n",
-    "(2650 lbs). We can simply scale the inertia values to our actual empty mass (this is not accurate,\n",
-    "because some of the mass difference will be due to fuel contents, and these are relatively far from\n",
-    "the CG)"
+    "From Wikipedia, we know the mass of the empty 172R is 767 kg. The inertia tensor with respect to its own center of mass $G_0$, projected in axes $\\varepsilon_b$ (that is, $J_{0[G_0]}^{b}$) can be estimated from the values given by Roskam for a similar configuration but with a different mass (2650 lbs). We can simply scale the inertia values to our actual empty mass. This is not totally accurate, because:\n",
+    "- The airframe dimensions may also be different, not just the mass.\n",
+    "- Some of the mass difference may be due to fuel contents, and these are relatively far from the CG."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: redefinition of constant mp_b_afm. This may fail, cause incorrect answers, or produce other errors.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Float64}:\n",
-       " 955.951     0.0      0.0\n",
-       "   0.0    1357.29     0.0\n",
-       "   0.0       0.0   1983.5"
+       "RigidBody(767.0, [955.9509749068076 0.0 0.0; 0.0 1357.2890424309735 0.0; 0.0 0.0 1983.4974342211926])"
       ]
      },
      "metadata": {},
@@ -228,7 +227,7 @@
    ],
    "source": [
     "# J0_G0_b =  ustrip.(u\"kg*m^2\", [948 0 0; 0 1346 0; 0 0 1967]u\"slug*ft^2\")\n",
-    "m0 = 894\n",
+    "m0 = 767\n",
     "J0_G0_b = 894/ustrip(u\"kg\", 2650u\"lb\") * ustrip.(u\"kg*m^2\", [948 0 0; 0 1346 0; 0 0 1967]u\"slug*ft^2\")\n",
     "c0 = RigidBody(m0, J0_G0_b)"
    ]
@@ -236,15 +235,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.0",
+   "display_name": "Julia 1.7.2",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": "1.7.2"
   },
   "orig_nbformat": 4
  },
