Renamed many things to improve clarity

--- a/sketches/c172r_points.ipynb
+++ b/sketches/c172r_points.ipynb
@@ -229,7 +229,7 @@
     "# J0_G0_b =  ustrip.(u\"kg*m^2\", [948 0 0; 0 1346 0; 0 0 1967]u\"slug*ft^2\")\n",
     "m0 = 767\n",
     "J0_G0_b = 894/ustrip(u\"kg\", 2650u\"lb\") * ustrip.(u\"kg*m^2\", [948 0 0; 0 1346 0; 0 0 1967]u\"slug*ft^2\")\n",
-    "c0 = RigidBody(m0, J0_G0_b)"
+    "c0 = RigidBodyDistribution(m0, J0_G0_b)"
    ]
   }
  ],
