--- a/sketches/io360_delta.ipynb
+++ b/sketches/io360_delta.ipynb
@@ -129,7 +129,7 @@
    "source": [
     "using Interpolations, Plots, Unitful, StructArrays, UnPack, HDF5\n",
     "using Flight.Atmosphere: ISA_layers, AirProperties, p_std, T_std, g_std, R\n",
-    "using Flight.Geodesy: AltG\n",
+    "using Flight.Geodesy: HGeop\n",
     "\n",
     "p_std_inHg = 101325 / 3386.389\n",
     "\n",
@@ -169,11 +169,11 @@
     "δ_from_p(p) = (p/p_std) ^ (1+β*R/(2*g_std)) #computes normalized δ \n",
     "\n",
     "function δ_from_h(h) #computes normalized δ\n",
-    "    @unpack p, T = AirProperties(AltG(h))\n",
+    "    @unpack p, T = AirProperties(HGeop(h))\n",
     "    p / p_std / √(T / T_std)\n",
     "end\n",
     "\n",
-    "@assert δ_from_h(1345) ≈δ_from_p(AirProperties(AltG(1345)).p)"
+    "@assert δ_from_h(1345) ≈δ_from_p(AirProperties(HGeop(1345)).p)"
    ]
   },
   {
