Updated tutorial, checkpoint before updating System

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -21,8 +21,8 @@
     "s_{k+1} = f_d(s_{k}, u_{k}, x_{k}, t_{k})\n",
     "$$\n",
     "\n",
-    "A concrete `System` type is defined by a subtype of the abstract `SystemDescriptor` type. This `SystemDescriptor` serves a dual purpose:\n",
-    "1. It holds the values for all the (immutable) parameters that characterize a specific instance of the `System`.\n",
+    "A concrete `System` type is specified by means a subtype of the abstract `SystemDescriptor` type. This `SystemDescriptor` serves a dual purpose:\n",
+    "1. It holds the values for all the (immutable) parameters that characterize a specific instance of that `System` type.\n",
     "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: $x$, $u$, $y$ and $s$.\n",
     "\n",
     "To clarify this, let us consider a simple example: a [mass-spring-damper][1] model.\n",
@@ -33,22 +33,22 @@
     "\\dot{p} = v\n",
     "$$\n",
     "\n",
-    "Where the following quantities have been introduced:\n",
+    "In which the following quantities are defined:\n",
     "- Velocity: $v$\n",
     "- Position: $p$\n",
     "- Normalized external force: $f = F/m$\n",
     "- Undamped natural frequency: $\\omega_n = \\sqrt{{k}/{m}}$\n",
     "- Damping ratio: $\\zeta = {c}/{2m\\omega_n}$\n",
     "\n",
-    "Of these, $\\omega_n$ and $\\zeta$ are constant parameters, $v$ and $p$ make up the system's continuous state, and $f$ is an external input. As system outputs, we may (arbitrarily) select $p$, $v$ and the acceleration $a = \\dot{v}$. \n",
+    "Of these, $\\omega_n$ and $\\zeta$ are constant parameters, $v$ and $p$ make up the models's continuous state, and $f$ is an external input. As outputs, we may (arbitrarily) select $p$, $v$ and the acceleration $a = \\dot{v}$. \n",
     "\n",
-    "In this conventional version, the mass-spring-damper model has no need for discrete states. To illustrate a use case for $s$, let's add a twist to the model: we would like the damper to engage only after the system has been in motion for more than $\\Delta t_d$ seconds, and disengage again whenever it has been stationary for more than $\\Delta t_d$ seconds.\n",
+    "In its vanilla version, the mass-spring-damper model has no need for discrete states. To illustrate a use case for $s$, let's add a twist to the model: we would like the damper to engage only after the system has been in motion for more than $\\Delta t_d$ seconds, and disengage again whenever it has been stationary for more than $\\Delta t_d$ seconds.\n",
     "\n",
-    "This behavior can be implemented by a simple finite state machine that keeps track of three variables: the damper's state (engaged or disengaged), the last time the system started moving, and the last time it stopped. These clearly represent states in the system, but unlike $v$ or $p$, their evolution is not described by a differential equation. Although two of them (the recorded times) are continuous variables, they are all updated at discrete time steps. Therefore, they belong in the discrete state $s$.\n",
+    "This behavior can be implemented by a simple finite state machine that keeps track of three variables: the damper's state (engaged or disengaged), the last time the system started moving, and the last time it stopped. These clearly represent states in the model, but unlike $v$ or $p$, their evolution is not described by a differential equation. Instead, they are all updated at discrete time steps. Therefore, they belong in the discrete state $s$.\n",
     "\n",
     "This modification also requires two additional parameters: the damper switching interval $\\Delta t_d$, and a velocity threshold $v_{\\epsilon}$, below which we will consider the system to be stationary.\n",
     "\n",
-    "We now have a good idea of what the `System`'s $x$, $u$, $y$, $s$ and constant parameters should look like.\n",
+    "We now have a good idea of what our `System`'s $x$, $u$, $y$, $s$ and constant parameters should look like.\n",
     "\n",
     "We can start by defining its `SystemDescriptor` as:\n",
     "\n",
@@ -85,14 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, to define the `System`'s $x$, $u$, $y$ and $s$, we need to follow a few rules:\n",
+    "Now, to define the `System`'s $x$, $u$, $y$ and $s$, we must keep a few rules in mind:\n",
     "1. $x$ must be a subtype of `AbstractArray{Float64}`\n",
     "2. $u$ and $s$ can be any mutable types\n",
     "3. $y$ must be an immutable type, and its fields must themselves be immutable as well\n",
     "\n",
-    "While $x$ can be defined as a plain `Vector{Float64}`, it is generally a better idea to use a labelled `ComponentVector{Float64}` (provided by the awesome [ComponentArrays.jl][ca] package). In fact, as we will see later, when multiple `System`s are composed, their respective continuous state vectors are automatically stacked as ```ComponentVector``` blocks.\n",
+    "While $x$ can be defined as a plain `Vector{Float64}`, it is generally a better idea to use a labelled `ComponentVector{Float64}` (provided by the awesome [ComponentArrays.jl][ca] package). In fact, as we will see in future tutorials, when multiple `System`s are composed, their respective continuous state vectors are automatically stacked as ```ComponentVector``` blocks.\n",
     "\n",
-    "$x$, $u$ and $s$ are preallocated upon initialization and modified in-place during simulation. In contrast, since $y$ is meant to be logged during simulation, a new instance must be created at every time step. Because mutable types are heap-allocated, making $y$ purely immutable is the price to pay to avoid performance-killing memory allocations.\n",
+    "$x$, $u$ and $s$ are preallocated upon initialization and modified in-place during simulation. In contrast, $y$ is meant to be logged during simulation, so a new instance must be created at every time step. Because mutable types are heap-allocated, making $y$ purely immutable is the price to pay to avoid performance detrimental memory allocations.\n",
     "\n",
     "With all of this in mind, we can define the `System`'s variables through the following type definitions and function extensions:\n",
     "\n",
@@ -131,17 +131,59 @@
    "source": [
     "A few comments are in order:\n",
     "- `SystemX`, `SystemU`, `SystemY` and `SystemD` are empty, trait-like types, used only for dispatch within the `System` constructor. \n",
-    "- Our `System`'s input (the mass-normalized force $f$) is a scalar. Since a plain `Float64` would be immutable, in order to be able to modify its value during simulation, we wrap it around a `Ref`. Alternatively, we could define a custom mutable type wrapping a single `Float64`.\n",
-    "- Being immutable, we could also declare $y$ to be a `NamedTuple`, but defining a custom type is more convenient in certain scenarios.\n",
+    "- Our `System`'s input (the mass-normalized force $f$) is a scalar. Since a plain `Float64` would be immutable, in order to be able to modify its value during simulation, we wrap it around a `Ref`. Alternatively, we could define a custom mutable type holding a single `Float64`.\n",
+    "- Being immutable, we could also declare `Y` to be a `NamedTuple`, but defining a custom type is more convenient in certain scenarios.\n",
     "- In this case, we are throwing away the `MassSpringDamper` argument, but if needed we could use it to make the initial values for the `System`'s variables depend on the values of the `MassSpringDamper` parameters.\n",
-    "- If our `System` had no $u$, $y$ or $s$, their corresponding method definitions could be omitted and they would be initialized to `nothing` by default. Not so $x$, which is always required.\n",
+    "- If our `System` had no `U`, `Y` or `S`, their corresponding method definitions could be omitted and they would be initialized to `nothing` by default. Not so `X`, which is always required.\n",
     "\n",
+    "With this, we can already instantiate our `System`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "typeof(sys) = System{MassSpringDamper, ComponentVector{Float64, Vector{Float64}, Tuple{Axis{(p = 1, v = 2)}}}, MassSpringDamperY, Base.RefValue{Float64}, MassSpringDamperS, NamedTuple{(:ω_n, :ζ, :Δt_d, :v_ϵ), NTuple{4, Float64}}, NamedTuple{(), Tuple{}}}\n",
+      "ẋ: (p = 0.0, v = 0.0)\n",
+      "x: (p = 0.0, v = 0.0)\n",
+      "y: MassSpringDamperY(0.0, 0.0, 0.0)\n",
+      "u: Base.RefValue{Float64}(0.0)\n",
+      "s: MassSpringDamperS(false, 0.0, 0.0)\n",
+      "t: Base.RefValue{Float64}(0.0)\n",
+      "params: (ω_n = 20.0, ζ = 0.4, Δt_d = 1.0, v_ϵ = 1.0e-6)\n",
+      "subsystems: NamedTuple()\n"
+     ]
+    }
+   ],
+   "source": [
+    "sys_desc = MassSpringDamper(; ω_n = 20.0, ζ = 0.4, Δt_d = 1)\n",
+    "sys = System(sys_desc)\n",
+    "@show typeof(sys)\n",
+    "Utils.showfields(sys) #show the type's fields with their current values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that all the `System`'s variables have been allocated as specified by our methods, and the parameters for this particular `MassSpringDamper` instance are now available to us in the `System`'s `params` field. Note the `System`'s time `t` is also stored as a `Ref`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The only missing piece is the `System`'s continuous and discrete dynamics. These are defined by two additional function extensions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,11 +191,11 @@
     "\n",
     "function Systems.f_cont!(sys::System{<:MassSpringDamper}) \n",
     "    \n",
-    "    @unpack x, u, s, params = sys #don't need s or t\n",
+    "    @unpack x, u, s, params = sys\n",
     "    @unpack p, v = x\n",
     "    @unpack ω_n, ζ = params\n",
     "\n",
-    "    f = u[] #de-reference to get the underlying Float64\n",
+    "    f = u[] #de-reference u to get the underlying Float64\n",
     "    ζ *= s.damper_engaged\n",
     "    a = f - ω_n^2 * p - 2ζ * ω_n * v\n",
     "    \n",
@@ -200,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,49 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are now ready to instantiate our `System`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "typeof(sys) = System{MassSpringDamper, ComponentVector{Float64, Vector{Float64}, Tuple{Axis{(p = 1, v = 2)}}}, MassSpringDamperY, Base.RefValue{Float64}, MassSpringDamperS, NamedTuple{(:ω_n, :ζ, :Δt_d, :v_ϵ), NTuple{4, Float64}}, NamedTuple{(), Tuple{}}}\n",
-      "ẋ: (p = 0.0, v = 0.0)\n",
-      "x: (p = 0.0, v = 0.0)\n",
-      "y: MassSpringDamperY(0.0, 0.0, 0.0)\n",
-      "u: Base.RefValue{Float64}(0.0)\n",
-      "s: MassSpringDamperS(false, 0.0, 0.0)\n",
-      "t: Base.RefValue{Float64}(0.0)\n",
-      "params: (ω_n = 20.0, ζ = 0.4, Δt_d = 1.0, v_ϵ = 1.0e-6)\n",
-      "subsystems: NamedTuple()\n"
-     ]
-    }
-   ],
-   "source": [
-    "sys_desc = MassSpringDamper(; ω_n = 20.0, ζ = 0.4, Δt_d = 1)\n",
-    "sys = System(sys_desc)\n",
-    "@show typeof(sys)\n",
-    "Utils.showfields(sys) #show the type's fields with their current values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can see that all the `System`'s variables have been allocated as specified in our methods, and the parameters for this particular `MassSpringDamper` instance are now available to us in the `System`'s `params` field. Note the `System`'s time `t` is also stored as a `Ref`.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's do some quick tests to make sure everything works as expected and our methods do not allocate:"
+    "Let's do some quick tests to make sure everything works as expected and our methods are non-allocating:"
    ]
   },
   {
@@ -301,9 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Everything looks right. Now we can create a `Simulation` for our `System`.  A `Simulation` is a parametric type that couples a `System` with a `OrdinaryDiffEq.ODEIntegrator`. It uses the `ODEIntegrator` interface to update the `System`'s internal variables through its `f_cont!` and `f_disc!` methods. It also adds a bit of machinery to ease user interaction with the `System` during and after simulation. Most of this is done via function wrappers and `DiffEqCallbacks`. \n",
-    "\n",
-    "The basic syntax is:"
+    "Now we are ready to simulate our `System`. For this, we create a `Simulation`:"
    ]
   },
   {
@@ -319,11 +317,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The initial condition is given by the values of $x$ and $s$ when the `System` is passed to the `Simulation` constructor. A RK4 algorithm is used by default. In general, fixed-step algorithms are preferred for aircraft simulation, because in many cases their discrete dynamics must be updated with a fixed period (think, for example, of a control law or filter discretized for digital implementation).\n",
+    "A `Simulation` is a parametric type that couples a `System` with a `OrdinaryDiffEq.ODEIntegrator`. It uses the `ODEIntegrator` interface to update the `System`'s internal variables and also adds a bit of machinery to ease user interaction with the `System` during and after simulation. Most of this is done via function wrappers and `DiffEqCallbacks`.\n",
+    "\n",
+    "Any ODE algorithm in the `OrdinaryDiffEq` ecosystem can be used for numerical integration. However, fixed-step algorithms are typically preferred for aircraft simulation, because many aircraft systems of interest have discrete dynamics that require a fixed update period (think, for example, of a control law or filter discretized for digital implementation). By default, a `Simulation` chooses a RK4 algorithm. \n",
     "\n",
     "`Simulation` extends the `SciMLBase.step!` function, which works like it does for an `ODEIntegrator`. It also defines a `run!` function, which is equivalent to `SciMLBase.solve!`, but allows pacing the integrator for pseudo-real time execution.\n",
     "\n",
-    "In contrast, `Simulation` does not provide a `reinit!` function. Currently, the safest and most convenient way to re-run a simulation is to instantiate a new `System` from the same descriptor (which ensures $x$, $s$ and $u$ start again from the same values), and from it a new `Simulation`:"
+    "The initial values for `x`, `u` and `s` are those held by the `System` when it is passed to the `Simulation` constructor. `Simulation` does not provide a `reinit!` function; the safest and most convenient way to run a simulation more than once is to set up a function that initializes the `System`'s `x`, `u` and `s` to their desired values, and then instantiate a new simulation from it. If the default values are appropriate, the `System` can simply be recreated from its descriptor."
    ]
   },
   {
@@ -332,7 +332,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = Simulation(System(sys_desc); t_end = 10) #instantiate a new simulation\n",
+    "sim = Simulation(System(sys_desc); t_end = 10) #instantiate a new simulation using the System's default x, u and s\n",
     "sim.u[] = 1.0 #we can access the underlying System's fields directly \n",
     "step!(sim, 5.0, true) #step the simulation to t = 5.0 and stop\n",
     "sim.u[] = 0.0 #release the external force\n",
@@ -343,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, the `Simulation` logs the `System`'s output $y$ at every time step. To retrieve it, we simply do:"
+    "By default, the `Simulation` logs the `System`'s output `y` at every time step. To retrieve it, we simply do:"
    ]
   },
   {
@@ -557,24 +557,6 @@
     "#Plot recipes are provided for TimeHistory{<:Real} and TimeHistory{<:AbstractVector{<:Real}}\n",
     "using Plots\n",
     "plot(th_p; plot_title = \"Mass Position\", ylabel = \"p (m)\") #plot position"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next steps: Instead of stepping manually, we can define a simulation control callback to do the job. A simulation control callback function has the following interface.\n",
-    "\n",
-    "Then, the second order system is coupled with a Piston.Thruster()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Since f_disc! is run after each step taken by the ODEIntegrator, if  a fixed step ODE solver must be chosen.\n",
-    " This flag is in turn passed during simulation to the `OrdinaryDiffEq` integrator so it can handle the discontinuity."
    ]
   }
  ],
