Sim update in progress, renamed f_cont! and f_disc!, defined sys_init function

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "using UnPack\n",
     "\n",
-    "function Systems.f_cont!(sys::System{<:MassSpringDamper}) \n",
+    "function Systems.f_ode!(sys::System{<:MassSpringDamper}) \n",
     "    \n",
     "    @unpack x, u, s, params = sys\n",
     "    @unpack p, v = x\n",
@@ -203,7 +203,7 @@
     "end\n",
     "\n",
     "#no discrete dynamics\n",
-    "function Systems.f_disc!(sys::System{<:MassSpringDamper})\n",
+    "function Systems.f_step!(sys::System{<:MassSpringDamper})\n",
     "\n",
     "    @unpack x, s, t, params = sys\n",
     "    @unpack Δt_d, v_ϵ = params\n",
@@ -228,11 +228,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Function `f_cont!` packs the `System`'s continuous dynamics $\\dot{x} = g(x,u,s,t)$ and observation equation $y = h(x,u,s,t)$ into a single equation $(\\dot{x}, y) = f(x, u, s, t)$. This is a design decision. It is motivated by the fact that, for many complex physical systems in this package, $\\dot{x}$ and $y$ share lots of intermediate computations, which would have to be performed twice were $g$ and $h$ defined in separate methods.\n",
+    "Function `f_ode!` packs the `System`'s continuous dynamics $\\dot{x} = g(x,u,s,t)$ and observation equation $y = h(x,u,s,t)$ into a single equation $(\\dot{x}, y) = f(x, u, s, t)$. This is a design decision. It is motivated by the fact that, for many complex physical systems in this package, $\\dot{x}$ and $y$ share lots of intermediate computations, which would have to be performed twice were $g$ and $h$ defined in separate methods.\n",
     "\n",
-    "Function `f_disc!` implements the discrete dynamics function $x_{k+1} = f_d(x_{k}, u_{k}, s_{k}, t_{k})$. Therefore, in theory it should only mutate the `System`'s discrete state `s`. However, in certain scenarios it may be useful to modify `x` too at certain discrete epochs. An example of this is the renormalization of unit quaternions or unit vectors in $x$ to correct deviations from their unit norm constraint due to numerical error. The `Bool` return value of `f_disc!` declares whether it has modified `x`.\n",
+    "Function `f_step!` implements the discrete dynamics function $x_{k+1} = f_d(x_{k}, u_{k}, s_{k}, t_{k})$. Therefore, in theory it should only mutate the `System`'s discrete state `s`. However, in certain scenarios it may be useful to modify `x` too at certain discrete epochs. An example of this is the renormalization of unit quaternions or unit vectors in $x$ to correct deviations from their unit norm constraint due to numerical error. The `Bool` return value of `f_step!` declares whether it has modified `x`.\n",
     "\n",
-    "For safety reasons, no trivial fallback methods are provided for `f_cont!` and `f_disc!`. They must be extended for every `System`, even if it has no continuous or discrete dynamics. This is how to extend them in a trivial case:"
+    "For safety reasons, no trivial fallback methods are provided for `f_ode!` and `f_step!`. They must be extended for every `System`, even if it has no continuous or discrete dynamics. This is how to extend them in a trivial case:"
    ]
   },
   {
@@ -244,8 +244,8 @@
     "struct NoContinuousDynamics <: SystemDescriptor end\n",
     "struct NoDiscreteDynamics <: SystemDescriptor end\n",
     "\n",
-    "Systems.f_cont!(::System{NoContinuousDynamics}, args...; kwargs...) = nothing\n",
-    "Systems.f_disc!(::System{NoDiscreteDynamics}, args...; kwargs...) = false\n"
+    "Systems.f_ode!(::System{NoContinuousDynamics}, args...; kwargs...) = nothing\n",
+    "Systems.f_step!(::System{NoDiscreteDynamics}, args...; kwargs...) = false\n"
    ]
   },
   {
@@ -279,17 +279,17 @@
     "using BenchmarkTools\n",
     "\n",
     "sys.u[] = 0.0\n",
-    "f_cont!(sys)\n",
+    "f_ode!(sys)\n",
     "@show sys.ẋ\n",
     "Utils.showfields(sys.y)\n",
     "\n",
     "sys.u[] = 1.0\n",
-    "f_cont!(sys)\n",
+    "f_ode!(sys)\n",
     "@show sys.ẋ\n",
     "Utils.showfields(sys.y)\n",
     "\n",
-    "@assert @ballocated(f_cont!($sys)) == 0\n",
-    "@assert @ballocated(f_disc!($sys)) == 0\n"
+    "@assert @ballocated(f_ode!($sys)) == 0\n",
+    "@assert @ballocated(f_step!($sys)) == 0\n"
    ]
   },
   {
