Checkpoint before integrating PICompensator into Ldg.Contact

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -6,24 +6,24 @@
    "source": [
     "The Flight.jl package is built upon a hierarchical, causal modeling paradigm. At its core lies the parametric `System` type, which represents a physical system with continuous and (optionally) discrete dynamics.  Every `System` has a continuous state `x`. It may also have an external input `u`, an output `y` and a discrete state `s`.\n",
     "\n",
-    "The `System`'s continuous dynamics are described by a differential equation of the form:\n",
+    "The `System`'s continuous dynamics are described by an ordinary differential equation:\n",
     "$$\n",
     "\\dot{x} = g(x, u, s, t)\n",
     "$$\n",
     "\n",
-    "Its output is given by an algebraic equation of the form:\n",
+    "Its output is given by an algebraic equation:\n",
     "$$\n",
     "y = h(x, u, s, t)\n",
     "$$\n",
     "\n",
-    "And its discrete dynamics are described by a difference equation of the form:\n",
+    "And its discrete dynamics are described by a difference equation:\n",
     "$$\n",
     "s_{k+1} = f_d(s_{k}, u_{k}, x_{k}, t_{k})\n",
     "$$\n",
     "\n",
     "A concrete `System` type is specified by means a subtype of the abstract `Component` type. This `Component` serves a dual purpose:\n",
     "1. It holds the values for all the (immutable) parameters that characterize a specific instance of that `System` type.\n",
-    "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: `x`, `u`, `y` and `s`.\n",
+    "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: `x`, `u`, `y` and `s`, and those that implement the `System`'s dynamics.\n",
     "\n",
     "To clarify this, let us consider a simple example: a [mass-spring-damper][1] model.\n",
     "\n",
