Added CImGui to dependencies, some minor name changes

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "Now, to define the `System`'s `x`, `u`, `y` and `s`, we must keep a few rules in mind:\n",
     "1. `x` must be a subtype of `AbstractArray{Float64}`\n",
-    "2. `u` and `s` can be any mutable types\n",
+    "2. `u` and `s` can be of any type, but they should be mutable or have mutable subtypes so that we can modify them in place\n",
     "3. `y` must be an immutable type, and its fields must themselves be immutable as well\n",
     "\n",
     "While `x` can be defined as a plain `Vector{Float64}`, it is generally a better idea to use a labelled `ComponentVector{Float64}` (provided by the awesome [ComponentArrays.jl][ca] package). In fact, as we will see in future tutorials, when multiple `System`s are composed, their respective continuous state vectors are automatically stacked as ```ComponentVector``` blocks.\n",
