Added Simulation support for purely discrete Systems

--- a/tutorials/_obsolete_01_systems.ipynb
+++ b/tutorials/_obsolete_01_systems.ipynb
@@ -21,9 +21,11 @@
     "s_{k+1} = f_d(s_{k}, u_{k}, x_{k}, t_{k})\n",
     "$$\n",
     "\n",
-    "A concrete `System` type is specified by means a subtype of the abstract `Component` type. This `Component` serves a dual purpose:\n",
+    "A concrete `System` type is specified through a subtype of the abstract `Component` type. This `Component` serves a dual purpose:\n",
     "1. It holds the values for all the (immutable) parameters that characterize a specific instance of that `System` type.\n",
     "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: `x`, `u`, `y` and `s`, and those that implement the `System`'s dynamics.\n",
+    "\n",
+    "**Start with a first order filter**\n",
     "\n",
     "To clarify this, let us consider a simple example: a [mass-spring-damper][1] model.\n",
     "\n",
@@ -42,7 +44,7 @@
     "- Undamped natural frequency: $\\omega_n = \\sqrt{{k}/{m}}$\n",
     "- Damping ratio: $\\zeta = {c}/{2m\\omega_n}$\n",
     "\n",
-    "Of these, $\\omega_n$ and $\\zeta$ are constant parameters, $v$ and $p$ make up the models's continuous state, and $f$ is an external input. As outputs, we may (arbitrarily) select $p$, $v$ and the acceleration $a = \\dot{v}$. \n",
+    "Of these, $\\omega_n$ and $\\zeta$ are constant parameters, $v$ and $p$ make up the models's continuous state `x`, and $f$ is an external input. As outputs, we may (arbitrarily) select $p$, $v$ and the acceleration $a = \\dot{v}$. \n",
     "\n",
     "In its vanilla version, the mass-spring-damper model has no need for discrete states. To illustrate a use case for `s`, let's add a twist to the model: we would like the damper to engage only after the system has been in motion for more than $\\Delta t_d$ seconds, and disengage again whenever it has been stationary for more than $\\Delta t_d$ seconds.\n",
     "\n",
